feat: Implement ItemSelector and ItemTemplate components with styling for enhanced item selection functionality

--- a/src/components/Prompt.css
+++ b/src/components/Prompt.css
@@ -96,6 +96,11 @@
     text-align: left;
 }
 
+.prompt-item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
 .textarea-note {
     width: 100%;
