--- a/src/components/Introduce.css
+++ b/src/components/Introduce.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -45,11 +45,19 @@
     border-radius: 15px;
     background-color: #FFFFDF;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: left;
     margin: 20px;
     padding: 15px;
+}
+
+.introduce-card-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .card-icon {
@@ -58,14 +66,20 @@
 }
 
 .card-title {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
 .card-desc {
+    font-size: 16px;
+    color: #474646;
+}
+
+.card-intro {
     font-size: 14px;
-    color: #666;
+    margin-top: 10px;
+    line-height: 1.5;
 }
 
 /* RWD */
