--- a/src/components/Prompt.css
+++ b/src/components/Prompt.css
@@ -102,22 +102,29 @@
     width: 100%;
 }
 
-.textarea-note {
-    width: 100%;
-    padding: 10px;
-    min-height: 150px;
-    border: 1px solid #FFBF00;
-    border-radius: 5px;
-    font-size: 1.08rem;
-}
-
+.textarea-note,
 .textarea-result {
     width: 100%;
     padding: 10px;
-    min-height: 250px;
     border: 1px solid #FFBF00;
     border-radius: 5px;
-    font-size: 1.08rem;
+    font-size: 1.03rem;
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+
+.textarea-note {
+    min-height: 200px;
+}
+.textarea-result {
+    min-height: 400px;
+}
+
+.textarea-note::placeholder {
+    font-size: 1.03rem;
+    line-height: normal;
+    color: #b9b9b9;
+    opacity: 1;
 }
 
 .textarea-note:hover,
